# duxxdb

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  LICENSE-BSL  LICENSING.md  NOTICE  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pypi.yml  release.yml
bench/comparative/: README.md  bench.py  docker-compose.yml  run.ps1  run.sh
bindings/node/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  test.js
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/duxxdb/: __init__.py  server.py
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_phase7_native.py  test_prompt_registry.py  test_server_e2e.py  test_server_facade.py
crates/duxx-bench/: Cargo.toml
crates/duxx-bench/benches/: recall.rs
crates/duxx-bench/src/: lib.rs
crates/duxx-cli/: Cargo.toml
crates/duxx-cli/examples/: chatbot_memory.rs
crates/duxx-cli/src/: main.rs
crates/duxx-cluster/: Cargo.toml
crates/duxx-cluster/src/: lib.rs
crates/duxx-coldtier/: Cargo.toml
crates/duxx-coldtier/src/: lib.rs  main.rs  snapshot.rs
crates/duxx-control/: Cargo.toml
crates/duxx-control/src/: api.rs  lib.rs  main.rs
crates/duxx-control/src/ui/: console.html
crates/duxx-core/: Cargo.toml
crates/duxx-core/src/: error.rs  lib.rs  schema.rs  value.rs
crates/duxx-cost/: Cargo.toml
crates/duxx-cost/src/: lib.rs
crates/duxx-datasets/: Cargo.toml
crates/duxx-datasets/src/: lib.rs
crates/duxx-docs/: Cargo.toml
crates/duxx-docs/src/: lib.rs
crates/duxx-embed/: Cargo.toml
crates/duxx-embed/src/: cohere.rs  hash.rs  lib.rs  openai.rs
crates/duxx-eval/: Cargo.toml
crates/duxx-eval/src/: lib.rs
crates/duxx-grpc/: Cargo.toml  build.rs
crates/duxx-grpc/proto/: duxx.proto
crates/duxx-grpc/src/: lib.rs  main.rs
crates/duxx-index/: Cargo.toml
crates/duxx-index/src/: lib.rs  text.rs  vector.rs
crates/duxx-mcp/: Cargo.toml
crates/duxx-mcp/src/: lib.rs  main.rs
crates/duxx-memory/: Cargo.toml
crates/duxx-memory/src/: lib.rs  session.rs  tool_cache.rs
crates/duxx-prompts/: Cargo.toml
crates/duxx-prompts/src/: lib.rs
crates/duxx-query/: Cargo.toml
crates/duxx-query/src/: lib.rs
crates/duxx-reactive/: Cargo.toml
crates/duxx-reactive/src/: lib.rs
crates/duxx-replay/: Cargo.toml
crates/duxx-replay/src/: lib.rs
crates/duxx-server/: Cargo.toml
crates/duxx-server/src/: glob.rs  lib.rs  main.rs  metrics.rs  otlp.rs  replication.rs  resp.rs  security.rs  studio.rs  tls.rs
crates/duxx-server/src/ui/: studio.html
crates/duxx-storage/: Cargo.toml
crates/duxx-storage/src/: backend.rs  lib.rs  storage.rs  table.rs
crates/duxx-tenant/: Cargo.toml
crates/duxx-tenant/src/: lib.rs
crates/duxx-token/: Cargo.toml
crates/duxx-token/src/: lib.rs
crates/duxx-trace/: Cargo.toml
crates/duxx-trace/src/: lib.rs
deploy/: Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT_AWS.md  DRAGONFLY_COMPARISON.md  DUXX_STACK_INTEGRATION.md  ENTERPRISE_CLOUD_PLAN.md  FAQ.md  INSTALLATION.md  INTEGRATION_GUIDE.md  MIGRATION_v0_1_to_v0_2.md  PHASE_2_3_PLAN.md  PROJECT_OVERVIEW.md  ROADMAP.md  SETUP.md  UAT_GUIDE.md  USER_GUIDE.md  V0_2_0_PLAN.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ui.tsx
frontend/src/lib/: api.ts  config.ts  toast.tsx
frontend/src/pages/: Console.tsx  Studio.tsx
integrations/python/: README.md  pyproject.toml
integrations/python/src/duxxdb_integrations/: __init__.py  client.py  langchain.py  llama_index.py
integrations/python/tests/: test_adapters.py
packaging/debian/: postinst  postrm  prerm
packaging/docker/: .env.example  docker-compose.yml  prometheus.yml
packaging/homebrew/: duxxdb.rb
packaging/k8s/: duxxdb.yaml
packaging/scripts/: install.sh
packaging/systemd/: duxx.env  duxxdb.service
scripts/: build.bat  build.sh
