[workspace]
resolver = "2"
members = [
    "crates/duxx-core",
    "crates/duxx-storage",
    "crates/duxx-index",
    "crates/duxx-query",
    "crates/duxx-memory",
    "crates/duxx-reactive",
    "crates/duxx-server",
    "crates/duxx-mcp",
    "crates/duxx-cli",
    "crates/duxx-bench",
    "crates/duxx-embed",
    "crates/duxx-grpc",
    "crates/duxx-coldtier",
    "crates/duxx-trace",
    "crates/duxx-prompts",
    "crates/duxx-datasets",
    "crates/duxx-eval",
    "crates/duxx-replay",
    "crates/duxx-cost",
    "bindings/python",
]
# bindings/node is intentionally NOT a workspace member: napi-build
# needs `libnode.dll.a` on Windows-mingw which rustup's bundle doesn't
# ship, so a workspace-wide `cargo build` would fail on that platform.
# Build it from its own directory instead: `cd bindings/node && npm run build`.
exclude = ["bindings/node"]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.75"
authors = ["DuxxDB Contributors"]
license = "Apache-2.0"
repository = "https://github.com/duxxdb/duxxdb"
homepage = "https://github.com/duxxdb/duxxdb"
readme = "README.md"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
parking_lot = "0.12"

# Indexing engines (Phase 2)
tantivy = "0.22"
hnsw_rs = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Python bindings
pyo3 = { version = "0.22", features = ["abi3-py38"] }

# Node.js bindings (napi-rs v2)
napi = { version = "2.16", default-features = false, features = ["napi9"] }
napi-derive = "2.16"
napi-build = "2"

# gRPC daemon (Phase 3.5). `tls` feature enables rustls-backed TLS
# in tonic::transport::Server (Phase 6.2).
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tonic-health = "0.12"
prost = "0.13"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Prometheus metrics (Phase 6.1)
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Native TLS on RESP + gRPC (Phase 6.2). rustls = pure-Rust, no OpenSSL.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rcgen = "0.13"   # used in tests to generate self-signed certs at runtime
tempfile = "3"

# Cold-tier export (Phase 5). Plain Parquet first -- pure Rust, ships
# anywhere, and Spark/DuckDB/Polars all read it natively. Delta Lake
# wrapping is a follow-up via the `deltalake` crate when we need
# transaction-log / time-travel semantics.
arrow = "53"
arrow-array = "53"
arrow-schema = "53"
parquet = { version = "53", default-features = false, features = ["arrow", "snap"] }

# Internal crates (consumed by siblings)
duxx-core = { path = "crates/duxx-core", version = "0.2.1" }
duxx-storage = { path = "crates/duxx-storage", version = "0.2.1" }
duxx-index = { path = "crates/duxx-index", version = "0.2.1" }
duxx-query = { path = "crates/duxx-query", version = "0.2.1" }
duxx-memory = { path = "crates/duxx-memory", version = "0.2.1" }
duxx-reactive = { path = "crates/duxx-reactive", version = "0.2.1" }
duxx-embed = { path = "crates/duxx-embed", version = "0.2.1" }
duxx-trace = { path = "crates/duxx-trace", version = "0.2.1" }
duxx-prompts = { path = "crates/duxx-prompts", version = "0.2.1" }
duxx-datasets = { path = "crates/duxx-datasets", version = "0.2.1" }
duxx-eval = { path = "crates/duxx-eval", version = "0.2.1" }
duxx-replay = { path = "crates/duxx-replay", version = "0.2.1" }
duxx-cost = { path = "crates/duxx-cost", version = "0.2.1" }

# HTTP client for OpenAI / Cohere embedders. rustls-tls = no OpenSSL native build,
# blocking = sync API matches our embedder trait.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }

# Durable storage backend. Pure Rust, ACID, MVCC, no FFI.
redb = "2"
bincode = "1.3"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
debug = 1
