[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "duxxdb"
description = "DuxxDB \u2014 the database built for AI agents."
version = "0.1.0"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "DuxxDB Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["database", "vector", "search", "ai", "agent", "rag", "memory"]

[project.urls]
Homepage = "https://github.com/duxxdb/duxxdb"
Repository = "https://github.com/duxxdb/duxxdb"

[tool.maturin]
# Build the extension-module variant of pyo3 (no libpython linkage).
features = ["pyo3/extension-module"]
# Compiled .pyd / .so lands at site-packages/duxxdb/_native.* and the
# pure-python facade lives in python/duxxdb/__init__.py. Keeping the
# native module under a private name lets the facade add docstrings,
# typing, and __all__.
module-name = "duxxdb._native"
python-source = "python"
strip = true
