[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "duxxdb"
description = "DuxxDB — the database built for AI agents. Hybrid (vector + BM25 + structured) retrieval, agent-native primitives (MEMORY / TOOL_CACHE / SESSION), embedded-or-server, RESP / gRPC / MCP."
version = "0.2.2"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [
    { name = "Bankatesh Choudhary", email = "phdmb10007.21@bitmesra.ac.in" },
]
maintainers = [
    { name = "Bankatesh Choudhary", email = "phdmb10007.21@bitmesra.ac.in" },
]
keywords = [
    "database", "vector-database", "vector-search", "hybrid-search",
    "ai", "ai-agents", "agent-memory", "rag", "retrieval-augmented-generation",
    "memory", "embeddings", "bm25", "hnsw", "rrf", "reciprocal-rank-fusion",
    "mcp", "model-context-protocol", "rust", "tantivy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
# Pulls in redis-py so ``from duxxdb.server import ServerClient`` works.
# Required to talk to a running duxx-server over RESP. The embedded
# MemoryStore / ToolCache / SessionStore do not need it.
server = ["redis>=5.0,<7.0"]
# Test dependencies for the pure-python server facade.
test = ["pytest>=7.0", "redis>=5.0,<7.0"]

[project.urls]
Homepage = "https://github.com/bankyresearch/duxxdb"
Documentation = "https://github.com/bankyresearch/duxxdb/tree/master/docs"
Repository = "https://github.com/bankyresearch/duxxdb"
Issues = "https://github.com/bankyresearch/duxxdb/issues"
Changelog = "https://github.com/bankyresearch/duxxdb/blob/master/docs/ROADMAP.md"

[tool.maturin]
# Build the extension-module variant of pyo3 (no libpython linkage).
features = ["pyo3/extension-module"]
# Compiled .pyd / .so lands at site-packages/duxxdb/_native.* and the
# pure-python facade lives in python/duxxdb/__init__.py. Keeping the
# native module under a private name lets the facade add docstrings,
# typing, and __all__.
module-name = "duxxdb._native"
python-source = "python"
strip = true
