[package]
name = "duxx-grpc"
description = "DuxxDB gRPC daemon — typed cross-language streaming over Tonic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "duxx-grpc"
path = "src/main.rs"

[dependencies]
duxx-core.workspace = true
duxx-memory.workspace = true
duxx-reactive.workspace = true
duxx-storage.workspace = true
duxx-embed = { workspace = true, features = ["http"] }
tokio = { workspace = true }
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
async-stream.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[build-dependencies]
tonic-build.workspace = true
