[package]
name = "duxx-index"
description = "DuxxDB index layer — tantivy BM25 (text) + cosine vector index (HNSW lands in Phase 2.2)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duxx-core.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tantivy.workspace = true
