[package]
name = "duxx-mcp"
description = "Model Context Protocol server for DuxxDB — JSON-RPC 2.0 over stdio."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "duxx-mcp"
path = "src/main.rs"

[dependencies]
duxx-core.workspace = true
duxx-memory.workspace = true
duxx-embed = { workspace = true, features = ["http"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
