[package]
name = "duxx-memory"
description = "Agent-facing primitives for DuxxDB: MEMORY, TOOL_CACHE, SESSION."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duxx-core.workspace = true
duxx-index.workspace = true
duxx-query.workspace = true
duxx-storage.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde.workspace = true
