[package]
name = "duxx-reactive"
description = "Reactive subscriptions for DuxxDB — tail changes as they happen."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duxx-core.workspace = true
tokio.workspace = true
tracing.workspace = true
