[package]
name = "duxx-server"
description = "DuxxDB network daemon — gRPC + RESP3. Phase-3."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duxx-core.workspace = true
duxx-memory.workspace = true
tokio.workspace = true
tracing.workspace = true
