[package]
name = "duxx-trace"
description = "DuxxDB — agent observability primitives (Span / Trace / Thread) and an in-process TraceStore. Phase 7.1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
duxx-core.workspace = true
duxx-reactive.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
